--- a/lists.html
+++ b/lists.html
@@ -5,6 +5,31 @@
 		<title>Text and Lists</title>
 	</head>
 	<body>
+		<h1>Halloween White Chocolate Bark</h1>
 
+		<h2>An easy, sweet and festive snack perfect for Halloween, featuring colorful Candy Corn and other treats. Serves 20.</h2>
+
+		<cite>Recipe from Free Recipes - http://www.freerecipes.org</cite>
+
+		<h3>Ingredients</h3>
+		
+		<ul>
+ 		   <li>15 Halloween Oreos with orange filling (chunks)</li>
+		   <li>1 1/2 cups salted pretzels (chunks)</li>
+		   <li>1/3 cup raisins</li>
+		   <li>1 2/3 pounds white baking chocolate (chunks)</li>
+		   <li>2 1/2 cups candy corn</li>
+    	   <li>1/2 cup Reese's Pieces</li>
+           <li>sprinkles for garnish (optional)</li>
+        </ul>
+
+		<h3>Instructions</h3>
+
+		<p>Grease a small baking sheet lightly. Scatter oreos, pretzels, Reese's Pieces and raisins across cookie sheet evenly.</p>
+
+		<ol>
+	   		<li>In a pot, bring water to a simmer. Place bowl with chocolate chunks on top of the pot, stir constantly until chocolate is almost completely melted (lumps will remain), remove from the heat, stir until completely smooth.</li>
+	    	<li>Poor chocolate over the cookie sheet, covering the filling. Sprinkle with candy corn and Halloween colored sprinkles. Let cool at room temperature until hardened. Break into pieces and serve!</li>
+	   	</ol>
 	</body>
 </html>
