Self-Assessment: Links WIP

--- a/links.html
+++ b/links.html
@@ -5,6 +5,75 @@
 		<title>Links Page</title>
 	</head>
 	<body>
-		
+		<h1>Strange Festivals</h1>
+
+		<h2>Festivals by Month</h2>
+
+		<p>Here are some of the strange festivals we will probably not be attending this year. Please contact us if you would like more information.</p>
+
+		<h3>January</h3>
+
+		<p><a href="http://www.froglegfestival.com">
+		Frog Leg Festival</a> <br />
+		Fellsmere, FL, USA</p>
+
+		<h3>February</h3>
+
+		<p><a href=""> </a>World Shovel Race Championships <br />
+		Angel Fire, NM, USA</p>
+
+		<h3>March</h3>
+
+		<p>American Crossword Puzzle Tournament <br />
+		Stamford, CT, USA</p>
+
+		<h3>April</h3>
+
+		<p>World Wildfowl Carving Championships <br />
+		Ocean City, MD, USA</p>
+
+		<h3>May</h3>
+
+		<p>Cheese Rolling <br />
+		Coopers Hill, England</p>
+
+		<h3>June</h3>
+
+		<p>Duct Tape Festival <br />
+		Avon, Ohio, USA</p>
+
+		<h3>July</h3>
+
+		<p>San Fermin in Nueva Orleans <br />
+		New Orleans, LA, USA</p>
+
+		<h3>August</h3>
+
+		<p>La Tomatina <br />
+		Bunol, Spain</p>
+
+		<h3>September</h3>
+
+		<p>Wisconsin State Cow Chip Throw <br />
+		Prairie du Sac, WI, USA</p>
+
+		<h3>October</h3>
+
+		<p>Wooly Worm Festival <br />
+		Banner Elk, NC, USA</p>
+
+		<h3>November</h3>
+
+		<p>World Championship Punkin Chunkin <br />
+		Bridgeville, DE, USA</p>
+
+		<h3>December</h3>
+
+		<p>Las Vegas Great Santa Run <br />
+		Las Vegas, NV, USA</p>
+
+		<p>About Strange Festivals</p>
+
+		<p>Top of page</p>	
 	</body>
 </html>
