Other Files added for submission

--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -49,5 +49,6 @@
 			<figcaption>Game controller</figcaption> <br />
 		</figure>
 
+		<cite>http://en.wikipedia.org/wiki/Video_game</cite>
 	</body>
 </html>
