--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -3,52 +3,58 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Project 1</title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	</head>
 	<body>
-		<h1>Video Gaming</h1>
+		
 
-		<h2>What Is A Video Game?</h2>
+		<div>
 
-		<blockquote>"Video games are my life!" - John C. Smith</blockquote>
+			<h1>Video Gaming</h1>
+			
+			<h2>What Is A Video Game?</h2>
 
-		<h3>Contents</h3>
+			<blockquote id="johnQuote">"Video games are my life!" <span id="johnName">- John C. Smith</span> </blockquote>
 
-		<ul>
-			<li><a href="#Summary">Summary</a></li>
-			<li><a href="#Controllers">Controllers</a></li>
-			<li><a href="Interactivity">Additional Interactivity</a></li>
-			<li><a href="#Gallery">Gallery</a></li>
-		</ul>
+			<h3>Contents</h3>
 
-		<h3 id="Summary">Summary</h3>
+			<ul>
+				<li><a href="#Summary">Summary</a></li>
+				<li><a href="#Controllers">Controllers</a></li>
+				<li><a href="Interactivity">Additional Interactivity</a></li>
+				<li><a href="#Gallery">Gallery</a></li>
+			</ul>
 
-		<p>A <strong>video game</strong> is an electronic game that involves human interaction with a user interface to generate visual feedback on a video device. The word video in video game traditionally referred to a raster display device,[1] but it now implies any type of display device that can produce two- or three-dimensional images. The electronic systems used to play video games are known as platforms; examples of these are personal computers and video game consoles. These platforms range from large mainframe computers to small handheld devices. Specialized video games such as arcade games, while previously common, have gradually declined in use. Video games have gone on to become an art form and industry.</p>
+			<h3 id="Summary">Summary</h3>
 
-		<h3 id="Controllers">Controllers</h3>
+			<p>A <strong>video game</strong> is an electronic game that involves human interaction with a user interface to generate visual feedback on a video device. The word video in video game traditionally referred to a raster display device,[1] but it now implies any type of display device that can produce two- or three-dimensional images. The electronic systems used to play video games are known as platforms; examples of these are personal computers and video game consoles. These platforms range from large mainframe computers to small handheld devices. Specialized video games such as arcade games, while previously common, have gradually declined in use. Video games have gone on to become an art form and industry.</p>
 
-		<ol>
-			<li>The input device primarily used to manipulate video games is called a game controller, and varies across platforms. For example, a controller might consist of only a button and a joystick, while another may feature a dozen buttons and one or more joysticks. Early personal computer games often needed a keyboard for gameplay, or more commonly, required the user to buy a separate joystick with at least one button.[2]</li>
+			<h3 id="Controllers">Controllers</h3>
 
-			<li>Many modern computer games allow or require the player to use a keyboard and a mouse simultaneously. A few of the most common game controllers are gamepads, mouses, keyboards, and joysticks. In recent years, additional methods of input have emerged such as camera-based player observation for video game consoles and touch-sensitive screens on mobile devices.</li>
-		</ol>
+			<ol>
+				<li>The input device primarily used to manipulate video games is called a game controller, and varies across platforms. For example, a controller might consist of only a button and a joystick, while another may feature a dozen buttons and one or more joysticks. Early personal computer games often needed a keyboard for gameplay, or more commonly, required the user to buy a separate joystick with at least one button.[2]</li>
 
-		<h3 id="Interactivity">Additional Interactivity</h3>
+				<li>Many modern computer games allow or require the player to use a keyboard and a mouse simultaneously. A few of the most common game controllers are gamepads, mouses, keyboards, and joysticks. In recent years, additional methods of input have emerged such as camera-based player observation for video game consoles and touch-sensitive screens on mobile devices.</li>
+			</ol>
 
-		<p>Video games typically use additional means of providing interactivity and information to the player. Audio is almost universal, using sound reproduction devices, such as speakers and headphones. Other feedback may come via haptic peripherals, such as vibration or force feedback, with vibration sometimes used to simulate force feedback.</p>
+			<h3 id="Interactivity">Additional Interactivity</h3>
 
-		<h3 id="Gallery">Gallery</h3>
+			<p>Video games typically use additional means of providing interactivity and information to the player. Audio is almost universal, using sound reproduction devices, such as speakers and headphones. Other feedback may come via haptic peripherals, such as vibration or force feedback, with vibration sometimes used to simulate force feedback.</p>
 
-		<figure>
-			<a href="http://upload.wikimedia.org/wikipedia/commons/a/a5/Wikipedia_-_Gamer.jpg"> <img src="images/gamer1.jpg" alt="Gamer Dude" width="200px"/></a>
-			<figcaption>Gamer dude</figcaption> <br />
+			<h3 id="Gallery">Gallery</h3>
 
-			<a href="http://pixabay.com/p-156464/?no_redirect"> <img src="images/gamer2.png" alt="Nintendo 3DS" width="200px" /></a>
-			<figcaption>Nintendo 3DS</figcaption> <br />
+			<figure>
+				<a href="http://upload.wikimedia.org/wikipedia/commons/a/a5/Wikipedia_-_Gamer.jpg"> <img src="images/gamer1.jpg" alt="Gamer Dude" width="200px"/></a>
+				<figcaption>Gamer dude</figcaption> <br />
 
-			<a href="http://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Tex_playing_video_games.jpg/1280px-Tex_playing_video_games.jpg"> <img src="images/gamer3.jpg" alt="Hands with game controller" width="200px" /></a>
-			<figcaption>Game controller</figcaption> <br />
-		</figure>
+				<a href="http://pixabay.com/p-156464/?no_redirect"> <img src="images/gamer2.png" alt="Nintendo 3DS" width="200px" /></a>
+				<figcaption>Nintendo 3DS</figcaption> <br />
 
-		<cite>http://en.wikipedia.org/wiki/Video_game</cite>
+				<a href="http://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Tex_playing_video_games.jpg/1280px-Tex_playing_video_games.jpg"> <img src="images/gamer3.jpg" alt="Hands with game controller" width="200px" /></a>
+				<figcaption>Game controller</figcaption> <br />
+			</figure>
+
+			<cite>http://en.wikipedia.org/wiki/Video_game</cite>
+		</div>
 	</body>
 </html>
